--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,47 @@
 steps:
+
+#Access git pvt key from Secret Manager using GCP sdk command and put it into local .ssh folder 
+- name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
+  args: ['-c', 'gcloud secrets versions access latest --secret=annie-git-pvt > /root/.ssh/id_rsa']
+  volumes:
+  - name: 'ssh'
+    path: /root/.ssh
+
+# Add github.com domain name to known_hosts inside .ssh folder, also change permission of pvt key file
+- name: 'gcr.io/cloud-builders/git'
+  entrypoint: 'bash'
+  args:
+  - -c
+  - |
+    chmod 600 /root/.ssh/id_rsa
+    cat <<EOF >/root/.ssh/config
+    Hostname github.com
+    IdentityFile /root/.ssh/id_rsa
+    EOF
+    ssh-keyscan -t rsa github.com > /root/.ssh/known_hosts
+  volumes:
+  - name: 'ssh'
+    path: /root/.ssh
+
+# Clone the repository
+- name: 'gcr.io/cloud-builders/git'
+  args:
+  - clone
+  - git@github.com:AnnieBem/base-npm
+  volumes:
+  - name: 'ssh'
+    path: /root/.ssh
+
 - name: gcr.io/cloud-builders/git
   entrypoint: 'bash'
   args:
   - '-c'
   - |-
-    git clone https://github.com/AnnieBem/base-npm.git
     ls -l
     cd base-npm && git checkout Build_Optimization
     cp src/App/Webapp/package.json /workspce/base-npm/.
     cp src/App/Webapp/vueapp/package.json /workspace/base-npm/vue_package.json
 
-steps:
 - name: gcr.io/cloud-builders/docker
   args: [ 'build', '-t', 'gcr.io/my-first-project/base-npm', '.']
