--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,8 +39,9 @@ steps:
   - '-c'
   - |-
     ls -l
+    pwd
     cd base-npm && git checkout Build_Optimization
-    cp src/App/Webapp/package.json /workspce/base-npm/.
+    cp src/App/Webapp/package.json /workspace/base-npm/.
     cp src/App/Webapp/vueapp/package.json /workspace/base-npm/vue_package.json
 
 - name: gcr.io/cloud-builders/docker
