--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -46,3 +46,7 @@ steps:
 
 - name: gcr.io/cloud-builders/docker
   args: ['build', '-t', 'gcr.io/myfirstproject-304920/base-npm', '.']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push','gcr.io/myfirstproject-304920/base-npm:latest']
+
